OpenCV/EclipseWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/DisplayImage.build.log
13:34:01 **** Build of configuration Debug for project DisplayImage ****
make all 
Building file: ../src/DisplayImage.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/local/include/opencv -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DisplayImage.d" -MT"src/DisplayImage.d" -o "src/DisplayImage.o" "../src/DisplayImage.cpp"
../src/DisplayImage.cpp: In function ‘int main(int, char**)’:
../src/DisplayImage.cpp:9:30: error: ‘imread’ was not declared in this scope
   image = imread( argv[1], 1 );
                              ^
../src/DisplayImage.cpp:17:52: error: ‘namedWindow’ was not declared in this scope
   namedWindow( "Display Image", CV_WINDOW_AUTOSIZE );
                                                    ^
../src/DisplayImage.cpp:18:34: error: ‘imshow’ was not declared in this scope
   imshow( "Display Image", image );
                                  ^
../src/DisplayImage.cpp:20:12: error: ‘waitKey’ was not declared in this scope
   waitKey(0);
            ^
src/subdir.mk:18: recipe for target 'src/DisplayImage.o' failed
make: *** [src/DisplayImage.o] Error 1

13:34:03 Build Finished (took 1s.356ms)

